SubVersion: $Id$

	- [kevin] $1662/1663: import V200 updates as HW2, not HW1 (and default TI-89/92+ updates to HW2)

- 03/08/2005, version 2.00-rc8:
	- [roms] $1615: TiEmu retains the state of dbg windows (open/closed) now.
	- [kevin] $1623/1624: fixed: only first 32 bytes of ram_exec were restored from savestate
	- [kevin] $1625/1626: buffering grayscale planes to avoid blinking in double-buffered games
	- [roms]  $1627: put all gscales extern into gscales.h
	- [roms]  $1629: added new I/O ports window which let view/modify HW registers
	- [roms]  $1648: fixed buffer overflow in RTC HW3 and disabled full screen mode (too slow)
	- [roms]  $1651: avoid link port acces in I/O window and don't allow writing on RO registers

- 16/07/2005, version 2.00-rc7:
	- [roms] $1583: fixed PPhD's bug (no reload of ROM calls when upgrading)
	- [roms] $1585: fixed comm box (removed calc & autodetect because un-needed)
	- [roms] $1586: fixed file patterns in file selector (case sensitivity)
	- [roms] $1588: avoid linkport accesses when browsing memory from dbg window
	- [roms] $1590: fixed severe bug in linkport (the status register was reset whenever read
		like specified by TI but the int handler proves it's false).
		TiEmu does not run an infinite loop when transfer is interrupted.
	- [roms] $1593: previous bug fixed again for _all_ calcs
	- [roms] $1597: set link timeout to 60s for non-NT platforms, 1.5s for others
	- [roms] $1598: added a new function in the ticables library API (ticable_link_reset)
		for use by TiEmu. It allows to reset/flush the pipes of virtual linking when the
		DBus is reset (usually due to transmission error). Link is now resumable.
	- [roms] $1601: reimplemented HW3 RTC from latest/new O. Armand's information.
	- [roms] $1608: automatically bind TiEmu #2 on the second instance of TiEmu
	//- [roms] $1609: fixed wraparound of clock() in RTC hw2 support (~74 minutes).

- 25/06/2005, version 2.00-rc6: