@@ -17,6 +17,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_NORMAL</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <signal name="delete_event" handler="on_dbgioports_window_delete_event" last_modification_time="Mon, 07 Jun 2004 08:11:10 GMT"/>
   <signal name="window_state_event" handler="on_dbgioports_window_state_event" last_modification_time="Sun, 27 Feb 2005 08:21:51 GMT"/>
 
@@ -38,7 +39,9 @@
 	  <property name="rules_hint">False</property>
 	  <property name="reorderable">False</property>
 	  <property name="enable_search">True</property>
-	  <signal name="button_press_event" handler="on_treeview3_button_press_event" last_modification_time="Mon, 02 Aug 2004 17:19:02 GMT"/>
+	  <property name="fixed_height_mode">False</property>
+	  <property name="hover_selection">False</property>
+	  <property name="hover_expand">False</property>
 	</widget>
       </child>
     </widget>
